force-app/main/default/objects/Opportunity/fields/APN_CRM_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>APN_CRM_Unique_Identifier__c</fullName>
    <label>APN CRM Unique Identifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>