force-app/main/default/objects/Opportunity/fields/AWS_Acceptance_Status__c.field-meta.xml
<CustomField>
    <fullName>AWS_Acceptance_Status__c</fullName>
    <label>AWS Acceptance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Action Required</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>