force-app/main/default/objects/Opportunity/fields/AWS_Campaign__c.field-meta.xml
<CustomField>
    <fullName>AWS_Campaign__c</fullName>
    <label>AWS Campaign (Additional Comments)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>