force-app/main/default/objects/Opportunity/fields/AWS_Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>AWS_Closed_Lost_Date__c</fullName>
    <label>AWS Closed Lost Date</label>
    <type>Date</type>
</CustomField>