force-app/main/default/objects/Opportunity/fields/AWS_Customer_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>AWS_Customer_Company_Name__c</fullName>
    <label>AWS Customer Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>