force-app/main/default/objects/Opportunity/fields/AWS_Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>AWS_Customer_Email__c</fullName>
    <label>AWS Customer Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>