force-app/main/default/objects/Opportunity/fields/AWS_Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>AWS_Customer_Phone__c</fullName>
    <label>AWS  Customer Phone</label>
    <type>Phone</type>
</CustomField>