force-app/main/default/objects/Opportunity/fields/AWS_Customer_Title__c.field-meta.xml
<CustomField>
    <fullName>AWS_Customer_Title__c</fullName>
    <label>AWS Customer Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>