force-app/main/default/objects/Opportunity/fields/AWS_Launched_Date__c.field-meta.xml
<CustomField>
    <fullName>AWS_Launched_Date__c</fullName>
    <label>AWS Launched Date</label>
    <type>Date</type>
</CustomField>