force-app/main/default/objects/Opportunity/fields/AWS_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>AWS_Opportunity_Name__c</fullName>
    <label>AWS Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>