force-app/main/default/objects/Opportunity/fields/AWS_Opportunity_Originator__c.field-meta.xml
<CustomField>
    <fullName>AWS_Opportunity_Originator__c</fullName>
    <label>AWS Opportunity Originator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atos Referral</fullName>
                <default>true</default>
                <label>Atos Referral</label>
            </value>
            <value>
                <fullName>AWS Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>