force-app/main/default/objects/Opportunity/fields/AWS_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>AWS_Sales_Rep__c</fullName>
    <label>AWS Sales Rep</label>
    <length>100</length>
    <type>Text</type>
</CustomField>