force-app/main/default/objects/Opportunity/fields/AWS_Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>AWS_Sales_Rep_Email__c</fullName>
    <label>AWS Sales Rep Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>