force-app/main/default/objects/Opportunity/fields/AWS_SF_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>AWS_SF_Campaign_Name__c</fullName>
    <label>AWS SF Campaign Name</label>
    <type>TextArea</type>
</CustomField>