force-app/main/default/objects/Opportunity/fields/AWS_Stage__c.field-meta.xml
<CustomField>
    <fullName>AWS_Stage__c</fullName>
    <label>AWS Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Technical Validation</fullName>
            </value>
            <value>
                <fullName>Business Validation</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Launched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>