force-app/main/default/objects/Opportunity/fields/AWS_Sub_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>AWS_Sub_Use_Case__c</fullName>
    <label>AWS Sub Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computer Vision - Video Analysis, OCR, Medical Imaging, Face Detection, etc…</fullName>
            </value>
            <value>
                <fullName>Natural Language Understanding = Sentiment Analysis. Topic modeling, Entity Recognition, Language recognition, etc..</fullName>
            </value>
            <value>
                <fullName>Language Translation</fullName>
            </value>
            <value>
                <fullName>Text to speed, speed to text</fullName>
            </value>
            <value>
                <fullName>Recommendations</fullName>
            </value>
            <value>
                <fullName>Forecasting - time series analysis, demand, etc..</fullName>
            </value>
            <value>
                <fullName>Personalization</fullName>
            </value>
            <value>
                <fullName>Conversational Interfaces</fullName>
            </value>
            <value>
                <fullName>Fraud and ANomaly Detection</fullName>
            </value>
            <value>
                <fullName>Big data analytics &amp; data science</fullName>
            </value>
            <value>
                <fullName>Business Intelligence &amp; data vi</fullName>
            </value>
            <value>
                <fullName>Data integration &amp; ETL</fullName>
            </value>
            <value>
                <fullName>Data Warehouse</fullName>
            </value>
            <value>
                <fullName>Real-time Analytics</fullName>
            </value>
            <value>
                <fullName>Data Lake</fullName>
            </value>
            <value>
                <fullName>Microsoft Apps</fullName>
            </value>
            <value>
                <fullName>Oracle Production</fullName>
            </value>
            <value>
                <fullName>Oracle Non-Prod</fullName>
            </value>
            <value>
                <fullName>SAP Production</fullName>
            </value>
            <value>
                <fullName>SAP Non-Prod</fullName>
            </value>
            <value>
                <fullName>Mainframe Modernization</fullName>
            </value>
            <value>
                <fullName>Contact Center</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Continuous Integration &amp; Continuous Delivery (CICD)</fullName>
            </value>
            <value>
                <fullName>Monitoring, logging and performance</fullName>
            </value>
            <value>
                <fullName>Infrastructure as code</fullName>
            </value>
            <value>
                <fullName>Productivity Applications</fullName>
            </value>
            <value>
                <fullName>AWS Lambda</fullName>
            </value>
            <value>
                <fullName>Kubernetes</fullName>
            </value>
            <value>
                <fullName>OpenShift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>