force-app/main/default/objects/Opportunity/fields/AWS_Update_Errors__c.field-meta.xml
<CustomField>
    <fullName>AWS_Update_Errors__c</fullName>
    <label>AWS Update Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>