force-app/main/default/objects/Opportunity/fields/AWS_Update_Success__c.field-meta.xml
<CustomField>
    <fullName>AWS_Update_Success__c</fullName>
    <label>AWS Update Success</label>
    <length>50</length>
    <type>Text</type>
</CustomField>