force-app/main/default/objects/Opportunity/fields/AWS_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>AWS_Use_Case__c</fullName>
    <label>AWS Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI/Machine Learning</fullName>
            </value>
            <value>
                <fullName>Big Data</fullName>
            </value>
            <value>
                <fullName>Business Applications</fullName>
            </value>
            <value>
                <fullName>Cloud Management Tools &amp; DevOps</fullName>
            </value>
            <value>
                <fullName>Tools &amp; DevOps</fullName>
            </value>
            <value>
                <fullName>Containers &amp; Serverless</fullName>
            </value>
            <value>
                <fullName>End User Computing</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Healthcare &amp; Life Sciences</fullName>
            </value>
            <value>
                <fullName>Hybrid Application Platform</fullName>
            </value>
            <value>
                <fullName>Industrial Software</fullName>
            </value>
            <value>
                <fullName>IOT</fullName>
            </value>
            <value>
                <fullName>Media &amp; High Performance Computing (HPC)</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Data Residency</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>