force-app/main/default/objects/Opportunity/fields/Contract_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Contract_Vehicle__c</fullName>
    <label>Contract Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>