force-app/main/default/objects/Opportunity/fields/Customer_AWS_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_AWS_Account_Id__c</fullName>
    <label>Customer AWS Account Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>