force-app/main/default/objects/Opportunity/fields/Delivery_Model__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Model__c</fullName>
    <label>Delivery Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SaaS or PaaS</fullName>
            </value>
            <value>
                <fullName>BYOL or AMI</fullName>
            </value>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Resell</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>