force-app/main/default/objects/Opportunity/fields/Expected_Monthly_AWS_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_AWS_Revenue__c</fullName>
    <inlineHelpText>Influenced Revenue equates to the Estimated Monthly Recurring Revenue</inlineHelpText>
    <label>Expected Monthly AWS Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>