force-app/main/default/objects/Opportunity/fields/First_Accepted_by_AWS__c.field-meta.xml
<CustomField>
    <fullName>First_Accepted_by_AWS__c</fullName>
    <label>First Accepted by AWS</label>
    <type>Date</type>
</CustomField>