force-app/main/default/objects/Opportunity/fields/First_Shared_with_AWS__c.field-meta.xml
<CustomField>
    <fullName>First_Shared_with_AWS__c</fullName>
    <label>First Shared with AWS</label>
    <type>Date</type>
</CustomField>