force-app/main/default/objects/Opportunity/fields/Is_Opp_From_Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Is_Opp_From_Marketing_Activity__c</fullName>
    <label>Is Opp From Marketing Activity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>