force-app/main/default/objects/Opportunity/fields/Marketing_Activity_Channel__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity_Channel__c</fullName>
    <label>Marketing Activity Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS Marketing Central</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Live Event</fullName>
            </value>
            <value>
                <fullName>Out Of Home (OOH)</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Virtual Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>