force-app/main/default/objects/Opportunity/fields/Marketing_Activity_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity_Use_Case__c</fullName>
    <label>Marketing Activity Use Case</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI/ML</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Application Integration</fullName>
            </value>
            <value>
                <fullName>Blockchain</fullName>
            </value>
            <value>
                <fullName>Business Applications</fullName>
            </value>
            <value>
                <fullName>Cloud Financial Management</fullName>
            </value>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Customer Engagement</fullName>
            </value>
            <value>
                <fullName>Databases</fullName>
            </value>
            <value>
                <fullName>Developer Tools</fullName>
            </value>
            <value>
                <fullName>End User Computing</fullName>
            </value>
            <value>
                <fullName>Front End Web &amp; Mobile</fullName>
            </value>
            <value>
                <fullName>Game Tech</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Management &amp; Governance</fullName>
            </value>
            <value>
                <fullName>Media Services</fullName>
            </value>
            <value>
                <fullName>Migration &amp; Transfer</fullName>
            </value>
            <value>
                <fullName>Networking &amp; Content Delivery</fullName>
            </value>
            <value>
                <fullName>Quantum Technologies</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>Satellite</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Serverless</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>VR &amp; AR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>