force-app/main/default/objects/Opportunity/fields/Marketing_Development_Funded__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Development_Funded__c</fullName>
    <label>Marketing Development Funded?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>