force-app/main/default/objects/Opportunity/fields/Opportunity_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Ownership__c</fullName>
    <label>Opportunity Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AWS Referral</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>