force-app/main/default/objects/Opportunity/fields/Partner_Primary_Need__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary_Need__c</fullName>
    <label>Partner Primary Need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architectural validation</fullName>
            </value>
            <value>
                <fullName>Business presentation</fullName>
            </value>
            <value>
                <fullName>Competitive Information</fullName>
            </value>
            <value>
                <fullName>Pricing Assistance</fullName>
            </value>
            <value>
                <fullName>Technical consultation</fullName>
            </value>
            <value>
                <fullName>Total Cost of Ownership Evaluation</fullName>
            </value>
            <value>
                <fullName>For Visibility - No Assistance Needed</fullName>
            </value>
            <value>
                <fullName>Deal support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>