force-app/main/default/objects/Opportunity/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <inlineHelpText>For AWS professional services opportunities, Please answer the following questions: What is the customer looking to do on AWS? What is our role in this project? What are the software applications and tools used to support the solution?</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>