force-app/main/default/objects/Opportunity/fields/RFX_Solicitation_Number__c.field-meta.xml
<CustomField>
    <fullName>RFX_Solicitation_Number__c</fullName>
    <label>RFX Solicitation Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>