force-app/main/default/objects/Opportunity/fields/Send_to_AWS__c.field-meta.xml
<CustomField>
    <fullName>Send_to_AWS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to AWS</label>
    <type>Checkbox</type>
</CustomField>