force-app/main/default/objects/Opportunity/fields/Target_Consumption_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Consumption_Date__c</fullName>
    <label>Target Consumption Date</label>
    <type>Date</type>
</CustomField>