force-app/main/default/objects/Opportunity/fields/Total_AWS_Item_Order_Entry__c.field-meta.xml
<CustomField>
    <fullName>Total_AWS_Item_Order_Entry__c</fullName>
    <label>Total AWS Item Order Entry</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Software__c</field>
        <operation>equals</operation>
        <value>Hyperscaler–AWS</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>