force-app/main/default/objects/Opportunity/fields/Total_Influence__c.field-meta.xml
<CustomField>
    <fullName>Total_Influence__c</fullName>
    <label>Total Influence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>